<resources>
    <string name="app_name">PesadeloOcultoOrigem</string>
    <string name="historiaPesadeloOculto">No ano de 2050, um laboratório científico em Nova York estava na vanguarda das pesquisas para a cura do câncer, focando em células modificadas. Entretanto, um efeito colateral inesperado das modificações foi o impacto sobre o sistema nervoso humano. Estas células modificadas não apenas causavam mutações, mas também alteravam drasticamente a aparência dos indivíduos afetados. Para piorar a situação, essa mutação gerou um vírus altamente contagioso que se espalhou rapidamente, dominando e controlando seus hospedeiros, resultando em mortes e massacres em massa. Um dos cientistas envolvidos na pesquisa original tornou-se central para esta história. Antes dedicado à busca pela cura do câncer, agora ele tinha uma missão ainda mais urgente. Ele precisava chegar a Oslo, capital da Noruega, na esperança de encontrar uma solução para o caos que sua pesquisa inadvertidamente desencadeou.</string>
    <string name="tituloOrigem">Pesadelo Oculto - Origem</string>
    <string name="tituloPesadeloOculto">Pesadelo Oculto - Historia</string>
    <string name="tituloRegras">Regras</string>
    <string name="GamePlay">Aqui está o gameplay do nosso jogo \'Pesadelo Oculto - Origem\'. É um título envolvente que demanda a total atenção do jogador, proporcionando uma experiência interativa intensa.</string>
    <string name="tituloJogabilidade">Jogabilidade</string>
    <string name="tituloHistoria">História</string>
    <string name="tituloSobre">Sobre</string>
    <string name="Referencia">Como referência usamos o jogo Slender: The Eight Pages, que tem bastantes aspectos parecidos com o nosso. Acesse o link ao clicar no botão para saber mais sobre o esse jogo.</string>
    <string name="tituloReferencia">Referência</string>
    <string name="textoSobre">4DreamGames: Em um mundo onde a tecnologia e a imaginação colidem, a 4DreamGames emerge como um farol de inovação no cenário de jogos digitais. Fundada em 2022, esta start-up desbravou rapidamente seu espaço no competitivo mercado de games, priorizando histórias envolventes, gráficos de tirar o fôlego e uma jogabilidade intuitiva. Com um nome que simboliza o sonho dos quatro fundadores de criar uma plataforma onírica para jogadores, a empresa acredita no poder dos jogos de transcender a realidade e levar os jogadores a mundos anteriormente inexplorados em sua imaginação. Cada lançamento da 4DreamGames não é apenas um jogo, mas uma viagem, uma aventura e, acima de tudo, um sonho compartilhado entre desenvolvedores e jogadores. A paixão e dedicação são evidentes em cada detalhe, e é essa obsessão por excelência que faz da 4DreamGames uma das empresas de jogos mais promissoras do século. Segue direcionamento do local da empresa.</string>
    <string name="LinkImagem">Link da imagem</string>
    <string name="LinkSedeEmpresa">Séde da empresa</string>
    <string name="RegrasLista">1 - Se o jogador for atingido pelo inimigo duas vezes ele morre.\n2 - Jogador precisa fugir e sair do laboratorio para ganhar o jogo.\n3 - Jogador não possui nenhuma ferramenta capaz de derrotar o infectado.\n4 - Jogador deve seguir as instruções dadas durante o jogo.\n5 - Jogador deve procurar as chaves espalhadas pelo mapa.</string>
    <string name="RegrasPesadeloOrigem">O jogador deve ter cautela, pois se for atingido pelo inimigo em duas ocasiões, encontrará seu fim. O objetivo principal é escapar, e para alcançar a vitória, é necessário que o jogador fuja e consiga sair do laboratório. No entanto, o desafio é ampliado pela falta de ferramentas à disposição do jogador para combater o infectado. Para avançar com sucesso, é essencial que o jogador siga atentamente as instruções fornecidas ao longo da partida. Além disso, uma tarefa crucial é procurar chaves que estão estrategicamente espalhadas pelo mapa, pois elas serão fundamentais para sua progressão e fuga.</string>
</resources>
